2008-11-24  Dodji Seketeli  <dodji@gnome.org>

	* projects.gnome.org/nemiver/index.html: Updated for 0.6.4 release.

2008-11-20  Murray Cumming  <murrayc@murrayc.com>

	* include/convwml:
	* include/www.gnome.org/submenus.wml:
	* include/www.gnome.org/devtools-navbar.wml:
	* include/www.gnome.org/menus.wml:
	* include/www.gnome.org/header.wml:
	* include/www.gnome.org/devtools-page.wml:
	* include/www.gnome.org/fonts.wml:
	* include/www.gnome.org/page.wml:
	* include/www.gnome.org/footer.wml:
	* include/www.gnome.org/utils.wml:
	Deleted these because they do not seem to be used by anything.
	I believe that include/evilsedhack is the only thing used to create 
	.html files from .wml files.

2008-11-18  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/Makefile.am:
	* projects.gnome.org/index.html: Add this, removing index.wml,
	so we can remove the secondary tabs, which were specific to 
	www.gnome.org.
	Also fixed the markup for the SUE entry.

2008-11-18  Murray Cumming  <murrayc@murrayc.com>

	* sql/gnomeweb.sql: Removed this. Whatever it was used for 8 years ago, 
	it does not seem to be used now.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/htaccess: Trying the IncludesNoExec option instead 
	of Includes.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/htaccess: Added a handler for .shtml files, 
	to try to get SSI working for evolution/.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/htaccess: Added the Includes option, trying to 
	allow server-side includes for projects.gnome.org/evolution/.
	We might need some extra stuff here to handle shtml file exentsions, 
	but we will see.
	This was probably in the server configuration before.

2008-11-13  Murray Cumming  <murrayc@murrayc.com>

	* projects.gnome.org/Makefile.am:
	* projects.gnome.org/htaccess: Added this, containing 
	maybe-useful stuff from www.gnome.org/htaccess. The common rules 