@@ -54,6 +54,18 @@
             </p>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.24/cheese-2.24.2.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.24.2
+              </a>
+              <p>
+              was released on November 24th 2008<br />
+              md5sums: 2f4b3c1b0040128be8f28b4d135beaa3
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.24/cheese-2.24.1.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
