@@ -140,6 +140,21 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>November 24th 2008</h3>
+          <p>
+          <b>Stable</b>
+          version 2.24.2 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>exit correctly with unknown command line arguments</li>
+            <li>fixed some memory leaks</li>
+            <li>add support for webcams which support only one resolution</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-November/msg00051.html">full release notes</a>)
+
           <h3>November 3rd 2008</h3>
           <p>
           <b>Unstable</b>
