@@ -1,3 +1,9 @@
+2008-11-25  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html: 
+	  populate the cheese 2.24.2 release
+
 2008-11-24  Dodji Seketeli  <dodji@gnome.org>
 
 	* projects.gnome.org/nemiver/index.html: Updated for 0.6.4 release.
